--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,5 @@
 <h1>Ranter</h1>
-<p>Hey! The point of Ranter is to just talk about what ever you want, anonymously
-just create a password and you're done! No emails or usernames.</p><br/><br/>
+<p>Hey! The point of Ranter is to just talk about what ever you want, anonymously! No emails or usernames.</p><br/><br/>
 
 <h3>//Threads//</h3>
 <table>
