--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,22 +1,17 @@
-<h1>Listing posts</h1>
+<h1>Ranter</h1>
+<p>Hey! The point of Ranter is to just talk about what ever you want, anonymously! No emails or usernames.</p><br/><br/>
 
+<div style="float:left;"
+<h3>//Threads//</h3>
 <table>
-  <tr>
-    <th>Posts</th>
-  </tr>
-
 <% @posts.each do |post| %>
-  <tr>
-    <td><%= link_to post.body, post %></td>
-    <% if admin? %>
-    <td><%= link_to 'Show', post %></td>
-    <td><%= link_to 'Edit', edit_post_path(post) %></td>
-    <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
-    <% end %>
-  </tr>
+  <% cycle('odd', 'even') %>
+  <tr><td><%= post.body[0..50] + " (" + post.responses.size.to_s + ")" %></td><td><%= link_to "show", :controller => "Posts", :action => "show", :id => post.id %></td></tr>
 <% end %>
+
 </table>
+</div>
 
-<br />
-
-<%= link_to 'New post', new_post_path %>
+<div style="float:right;">
+  <%= render :partial => "form" %>
+</div>
