--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,5 +1,5 @@
 <p>
-  <%= link_to "ALL POSTS", :controller => "Posts", :action => "index" %><br/><b><%=h @post.body %></b>
+  <%= link_to "ALL POSTS", :controller => "Posts", :action => "index" %> >> <b><%=h @post.body %></b>
 </p>
 
 <table>
