--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,12 +1,11 @@
 <h1>Ranter</h1>
 <p>Hey! The point of Ranter is to just talk about what ever you want, anonymously! No emails or usernames.</p><br/><br/>
 
-<div style="float:left;"
+<div style="float:left;">
 <h3>//Threads//</h3>
 <table>
 <% @posts.each do |post| %>
-  <% cycle('odd', 'even') %>
-  <tr><td><%= post.body[0..50] + " (" + post.responses.size.to_s + ")" %></td><td><%= link_to "show", :controller => "Posts", :action => "show", :id => post.id %></td>
+  <tr class="<%= cycle('odd', 'even')%>" ><td><%=link_to post.body[0..50] + " (" + post.responses.size.to_s + ")",  :action => "show", :id => post.id %></td>
     <% if admin? %>
     <td><%= link_to 'Edit', edit_post_path(post) %></td>
     <td><%= link_to 'Destroy', post, :confirm => 'Are you sure?', :method => :delete %></td>
@@ -14,6 +13,7 @@
   </tr>
 <% end %>
 
+  <% reset_cycle %>
 </table>
 </div>
 
